k8s/deploy-tomcat-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
spec:
  selector:
    matchLabels:
      app: tomcat
  replicas: 3
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: jtips/tomcat:simple
        imagePullPolicy: Never
           resources:
          limits:
            memory: "256Mi"
            cpu: "2"
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: cluster
          containerPort: 4000
          protocol: TCP
