k8s/deploy-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    component: db
spec:
  clusterIP: None
  selector:
    app: db
  ports:
  - port: 1527
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: derby
        image: jtips/derby
        imagePullPolicy: Never
        resources:
          limits:
            memory: "256Mi"
            cpu: "2"
        ports:
        - name: http
          containerPort: 1527
          protocol: TCP
