k8s/service-tomcat.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat0
  labels:
    component: tomcat
spec:
  clusterIP: None
  selector:
    app: tomcat
  ports:
  - port: 8080
